# UNER_Tesis_Controlador_SCPA

./: CMakeLists.txt  Controlador_SCPA.pro  README.md  applicationstate.cpp  applicationstate.h  consolelistener.cpp  consolelistener.h  controlmanager.cpp  controlmanager.h  datatypes.h  frequencydriver.cpp  frequencydriver.h  hmiclient.cpp  hmiclient.h  hmiclientmanager.cpp  hmiclientmanager.h  hmimanager.cpp  hmimanager.h  hmiprotocolmanager.cpp  hmiprotocolmanager.h  hmiprotocolpackage.cpp  hmiprotocolpackage.h  hmiservermanager.cpp  hmiservermanager.h  hmithread.cpp  hmithread.h  hmiuser.cpp  hmiuser.h  hmiusersmanager.cpp  hmiusersmanager.h  logfile.cpp  logfile.h  main.cpp  metricsmanager.cpp  metricsmanager.h  mysqldatabase.cpp  mysqldatabase.h  pidcontroller.cpp  pidcontroller.h  scpa.cpp  (+9 more)
